# pydot

./: .coveragerc  .gitattributes  .gitignore  .travis.yml  ChangeLog  EmptyOutputFiles.md  LICENSE  MANIFEST.in  ProjectHome.md  README.md  REUSE.toml  RunningTests.md  SECURITY.md  TODO.md  appveyor.yml  data.json  doc.md  dot_parser.py  endpoint.json  generate_mixins.py  pydot.py  pyproject.toml  requirements-conda.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: CI.yml  codeql.yml  coverage.yml  label-conflicts.yml  reuse.yml  scorecard.yml
.reuse/: dep5
docs/: Makefile  conf.py  index.rst  make.bat
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_288b311da95ac7b6___init___py.html  z_288b311da95ac7b6_classes_py.html  z_288b311da95ac7b6_core_py.html  z_288b311da95ac7b6_dot_parser_py.html  z_288b311da95ac7b6_exceptions_py.html  z_36f028580bb02cc8_conftest_py.html  z_36f028580bb02cc8_test_api_py.html  z_36f028580bb02cc8_test_classes_py.html  z_36f028580bb02cc8_test_context_managers_py.html  z_36f028580bb02cc8_test_logging_py.html  z_36f028580bb02cc8_test_parser_py.html  z_36f028580bb02cc8_test_pydot_py.html  z_7d3dad02bf4d6005_tempfile_py.html
src/pydot/: __init__.py  classes.py  classes.pyi  constants.py  core.py  core.pyi  dot_parser.py  exceptions.py  launcher.py  mixins.py  utils.py
src/pydot/_vendor/: tempfile.py
tags/pydot-0.9.10/: ChangeLog  pydot.py
tags/pydot-1.0.2/: setup.py
tags/pydot-1.0.25/: setup.py
tags/pydot-1.0.28/: dot_parser.py
tags/pydot-1.0.28/test/my_tests/: numeric_ids_unicode.dot  parsing_test.dot
tags/pydot-1.0.4/test/graphs/: md5_orig.jpe_text
test/: _functools.py  badexit.py  compare_images.sh  conftest.py  pydot_unittest.py  test_api.py  test_benchmark_parser.py  test_classes.py  test_context_managers.py  test_logging.py  test_parser.py  test_pydot.py
test/from-past-to-future/: README.md  from-past-to-future.dot
test/graphs/: b278.dot  b488.dot  b993.dot  complex_edges.dot  url.dot
test/my_tests/: escaped_newlines.dot  escaped_quoted_label.dot  hash_inside_html.dot  hash_inside_html_1.dot  hash_inside_html_2.dot
trunk/: pydot.py
trunk/test/: pydot_unittest.py
trunk/test/from-past-to-future/: from-past-to-future.dot
trunk/test/graphs/: md5_dot.jpe_text  ports.dot
trunk/test/my_tests/: html_labels.dot
wiki/: EmptyOutputFiles.wiki  RunningTests.wiki
