[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = 'pydot'
description = "Python interface to Graphviz's Dot"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">= 3.8"
dependencies = [
  'pyparsing>=3.0.9'
]
authors = [
  {name = "Ero Carrera", email = "ero.carrera@gmail.com"},
  {name = "Peter Nowee", email = "peter@peternowee.com"},
  {name = "Łukasz", email = "lukaszlapinski7@gmail.com"},
  {name = "FeRD (Frank Dana)", email = "ferdnyc@gmail.com"},
]
maintainers = [
  {name = "Peter Nowee", email = "peter@peternowee.com"},
  {name = "Łukasz", email = "lukaszlapinski7@gmail.com"},
]
keywords = ["graphviz", "dot", "graphs", "visualization"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
  'version',
]

[tool.setuptools.dynamic]
version = {attr = "pydot.__version__"}

[project.urls]
Homepage = "https://github.com/pydot/pydot"
Changelog = "https://github.com/pydot/pydot/blob/master/ChangeLog"
"Bug Tracker" = "https://github.com/pydot/pydot/issues"

[project.optional-dependencies]
dev = [
  'chardet',
  'parameterized',
  'ruff'
]
tests = [
  'chardet',
  'parameterized',
  'ruff',
  'tox',
  'unittest-parallel',
]
release = ['zest.releaser[recommended]']

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ['E', 'F', 'W', 'I', 'UP', 'C4']
